--- a/src/sass/normalize.scss
+++ b/src/sass/normalize.scss
@@ -51,3 +51,13 @@ img {
   -ms-interpolation-mode: bicubic; /* 2 */
   max-width: 100%;
 }
+
+
+a{
+  text-decoration: none;
+  transition: color 200ms ease-in-out;
+  
+  &:hover {
+    transition: color 200ms ease-in-out;
+  }
+}
