--- a/src/sass/normalize.scss
+++ b/src/sass/normalize.scss
@@ -19,7 +19,7 @@ html {
 
 html,
 body, #root {
-  height: 100%;
+  min-height: 100vh;
 }
 
 svg {
@@ -59,5 +59,15 @@ a{
   
   &:hover {
     transition: color 200ms ease-in-out;
+  }
+}
+
+button{
+  all: unset;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+  &:active {
+    transform: scale(0.98);
+    transition: transform 0.2s ease-in-out;
   }
 }
