--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 // Import fonts Rubik and Fira Sans
 @import url('https://fonts.googleapis.com/css2?family=Rubik');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code');
 
 @import "./normalize";
 @import "./helpers";
